--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       </div>
     </div>
   </main>
-  <footer>
+  <footer class="attribute">
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Piyush Anand</a>.
